--- a/helm/charts/producer/templates/deployment.yaml
+++ b/helm/charts/producer/templates/deployment.yaml
@@ -20,6 +20,24 @@ spec:
             - name: KAFKA_BROKER
               value: {{ .Values.global.kafka.broker | default .Values.env.kafkaBroker | quote }}
             - name: KAFKA_TOPIC
-              value: {{ .Values.global.kafka.topic | default .Values.env.kafkaTopic | quote }}
+              value: "trades-{{ .Values.global.coinSymbol | default .Values.env.coinSymbol }}"
             - name: COIN_SYMBOL
               value: {{ .Values.global.coinSymbol | default .Values.env.coinSymbol | quote }}
+          envFrom:
+            - secretRef:
+                name: binance-api-keys 
+      tolerations:
+      - key: "app"
+        operator: "Equal"
+        value: "cryptotrack"
+        effect: "NoSchedule"
+
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: "app"
+                operator: "In"
+                values:
+                - "cryptotrack"
