--- a/helm/coin-pipeline/values.yaml
+++ b/helm/coin-pipeline/values.yaml
@@ -1,24 +1,27 @@
 # ✅ 이 파이프라인의 핵심 파라미터
 coinSymbol: "btcusdt"
 
-# ✅ producer 차트로 전달될 값들
 producer:
   replicaCount: 1
   image:
-    repository: your-registry/producer
-    tag: "1.0"
+    # repository는 하위 차트의 기본값을 사용하도록 주석 처리 유지
+    # repository: your-registry/producer
+    tag: "1.0" # 태그는 상위에서 관리
 
 # ✅ consumer 차트로 전달될 값들
 consumer:
   replicaCount: 1
   image:
-    repository: your-registry/consumer
+    # repository: your-registry/consumer
     tag: "1.0"
+
 
 # ✅ 모든 하위 차트가 공통으로 사용할 수 있는 값 (global)
 global:
   kafka:
     broker: "kafka-service.default.svc.cluster.local:9092"
-    topic: "trades"
-  storage: # consumer만 사용하겠지만, 공통 관리 가능
+    groupId: "crypto-s3-saver-v1" 
+  storage: 
     endpoint: "minio-service:9000"
+    accessKey: "choizeus"
+    bucketName: "crypto-data"
